# task1

./: CMakeLists.txt  readme.txt  run_all_tests.sh
src/: CMakeLists.txt  task1.cpp  task1.h  task1_internal.cpp  task1_internal.h
test/: CMakeLists.txt  middle_point_test.cpp  task1_test.cpp  turn_predicate_test.cpp
